# fast-aid-pi

./: README.md
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/api/chat/: route.ts
client/app/doctor/dashboard/: page.tsx
client/components/: AuthContext.tsx  AuthModal.tsx  DoctorDashboard.tsx  MarkdownParser.tsx  Questionnaire.tsx  UserProfile.tsx
server/: .gitignore  database.db  pyproject.toml  server.py  test.sh  test_api.py  test_suggestions.py
server/source/: app.py  schemas.py
server/source/database/: auth.py  db.py  models.py  operations.py
server/source/ml_models/: __init__.py  suggestions.py
