[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.71.0",
    "fastapi>=0.120.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "requests>=2.31.0",
]
